--- a/tmc-website/package.json
+++ b/tmc-website/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcrypt-ts": "^5.0.2",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "next": "14.2.5",
+    "next-auth": "5.0.0-beta.20",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
