--- a/tmc-website/package.json
+++ b/tmc-website/package.json
@@ -13,6 +13,7 @@
     "bcrypt-ts": "^5.0.2",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "mongodb": "^6.8.0",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.20",
     "react": "^18",
