--- a/tmc-website/package.json
+++ b/tmc-website/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.7",
+    "@mui/icons-material": "^6.1.9",
+    "@mui/material": "^6.1.9",
     "bcrypt": "^5.1.1",
     "bcrypt-ts": "^5.0.2",
     "bcryptjs": "^2.4.3",
@@ -21,6 +22,7 @@
     "next-auth": "5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18",
+    "react-mathquill": "^1.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
