--- a/tmc-website/package.json
+++ b/tmc-website/package.json
@@ -17,11 +17,14 @@
     "bcrypt-ts": "^5.0.2",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "i": "^0.3.7",
     "mongodb": "^6.8.0",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.20",
+    "npm": "^11.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-latex-next": "^3.0.0",
     "react-mathquill": "^1.0.3",
     "zod": "^3.23.8"
   },
