--- a/tmc-website/package.json
+++ b/tmc-website/package.json
@@ -18,7 +18,7 @@
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "i": "^0.3.7",
-    "mongodb": "^6.8.0",
+    "mongodb": "6.12",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.20",
     "npm": "^11.0.0",
