--- a/tmc-website/package.json
+++ b/tmc-website/package.json
@@ -18,7 +18,7 @@
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "i": "^0.3.7",
-    "mongodb": "6.12",
+    "mongodb": "^6.12.0",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.20",
     "npm": "^11.0.0",
@@ -38,5 +38,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "browser": {
+    "child_process": false
   }
 }
