--- a/tmc-website/.env.local
+++ b/tmc-website/.env.local
@@ -1,2 +1,2 @@
-MONGODB_URI = *"mongodb+srv://williamzhong123:szJBy1w41kcuROXF@tmc-competition-data.zawdt.mongodb.net/?retryWrites=true&w=majority&appName=TMC-Competition-Data"*
-DB_NAME = *"TMC-Comp-Data"*
+MONGODB_URI = mongodb+srv://williamzhong123:szJBy1w41kcuROXF@tmc-competition-data.zawdt.mongodb.net/?retryWrites=true&w=majority&appName=TMC-Competition-Data
+DB_NAME = TMC-Comp-Data
