--- a/tmc-website/package.json
+++ b/tmc-website/package.json
@@ -19,8 +19,9 @@
     "clsx": "^2.1.1",
     "i": "^0.3.7",
     "mongodb": "^6.12.0",
-    "next": "14.2.5",
+    "next": "^15.1.2",
     "next-auth": "5.0.0-beta.20",
+    "next-client-cookies": "^2.0.0",
     "npm": "^11.0.0",
     "react": "^18",
     "react-dom": "^18",
