--- a/tmc-website/tsconfig.json
+++ b/tmc-website/tsconfig.json
@@ -26,7 +26,10 @@
         "./*"
       ]
     },
-    "target": "ES2017"
+    "target": "ES2017",
+    "typeRoots": [
+      "./types"
+    ],
   },
   "include": [
     "next-env.d.ts",
